features 2 fix horizontal overflow on mobile

--- a/src/style/components/_feature.scss
+++ b/src/style/components/_feature.scss
@@ -76,6 +76,8 @@
     }
 
     &:nth-child(2) {
+        overflow-x: hidden;
+
         .image-container, .image-inner-wrapper {
             position: relative;
             height: 450px;
